# DLT

./: README.md  pyproject.toml
config/: advanced_examples.yaml  config.yaml  config_dev.yaml  config_prod.yaml  config_production.yaml  examples.yaml  model_config.yaml
data/: README.md
examples/: quick_start.py
models/: README.md
models/deployments/v1.2.3/: deployment_metadata.json
models/production/: metadata.json  model.joblib
notebooks/: 01_quick_start_guide.ipynb  02_advanced_features.ipynb  03_multi_framework_comparison.ipynb  04_production_deployment_guide.ipynb  05_flexible_model_system.ipynb
scripts/: train_model.py
src/: __init__.py
src/dlt/: __init__.py  cli.py
src/dlt/core/: __init__.py  config.py  losses.py  model.py  pipeline.py  templates.py  trainer.py
src/dlt/utils/: __init__.py  loss.py  performance.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_config.py  test_integration.py  test_model.py  test_pipeline.py  test_trainer.py  test_utils.py  validate_framework.py
